2015-07-20 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: adding LooseBad per jet; preparing to call PURW, but still commented out for now
	
2015-07-20 David Hohn <david.hohn@cern.ch>
	* optimise Count histo for data: will now copy the content of TopAnalysis builtin cutflow histo to our Count histo at the end of jobs for data

2015-07-16 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: adding 50ns un-prescaled triggers according to 
	https://twiki.cern.ch/twiki/bin/viewauth/Atlas/LowestUnprescaled#Data_Periods
	
2015-07-13 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseEventSaver: switched to post-calib JVT from TopAna decoration
	
2015-07-10 David Hohn <david.hohn@cern.ch>
	* fix Count histo for data: the LooseEventSaver now sees all events and decides which events to save.

2015-07-10 Giuseppe Salamanna <salaman AT cern.ch>
	* generic_config-mc15.txt: eliminate reference to GRL
	
2015-07-09 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonElectronLikelihoodDC14: updated confDir to latest (20150429) and change in LH computation
	from author softe to AuthorAmbiguous
	
2015-07-08 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonLooseObjectLoader: make things a bit more configurable
	* generic-..txt: clean up mc15 one and add lepton and jet cuts; create data15 one 
	
2015-07-07 Giuseppe Salamanna <salaman AT cern.ch>
	* ttHMultileptonElectronLikelihoodDC14: moved from eta to etaBE(2) cut 
	* ttHMultileptonLooseEventSaver: added etaBE(2), loose isolation from tool and ele match; and d0sig from AODTrackingHelpers
	* README: updated to Top,20.3.18
	
2015-07-03 David Hohn <david.hohn@cern.ch>
	* loosen tau cuts

2015-07-01 David Hohn <david.hohn@cern.ch>
	* adjust to new names of particleType and Origin in Truth containers, works with derivation 20.1.5.4

2015-06-30 David Hohn <david.hohn@cern.ch>
	* Add "Count" histogram for normalisation
