@@ -1,0 +1,5 @@
+SelectionCuts: PtMin AbsEtaRegion AbsCharge NTracks
+PtMin: 20
+AbsEtaRegion: 0; 1.37; 1.52; 2.5
+AbsCharge: 1
+NTracks: 1; 3
